[gd_scene load_steps=3 format=2]

[ext_resource path="res://game_logic/MouseCollider.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 0.5

[node name="MouseCollider" type="Area2D"]
script = ExtResource( 1 )

[node name="MouseCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_MouseCollider_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_MouseCollider_area_exited"]
